fix legibility paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 body {
     font-family: "futura-pt", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
     color: #111111;
+    text-rendering: optimizeLegibility;
+    text-wrap: pretty;
 }
 
 img {
@@ -365,7 +367,7 @@ p::selection, h2::selection, li::selection, a::selection {
     font-size: 20px;
     line-height: 1.5;
     margin-bottom: 1.5em;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .culture-p p:last-child, .sneaker-model-p p:last-child, .sneaker-collab-p p:last-child {
